<resources>
    <string name="app_name">Feero_CS-499 Capstone</string>
    <string name="returning_greeting_text">Welcome, %s!</string>
    <string name="new_greeting_text">Welcome to the app, %s!</string>
    <string name="submit_button">Submit</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="new_user_button">Create Account</string>
    <string name="new_user_text">New User?</string>
    <string name="back_button">&lt;</string>
    <string name="daily_weight">Daily Weight</string>
    <string name="date">Date</string>
    <string name="daily_intake">Daily Intake</string>
    <string name="exercise">Exercise</string>
    <string name="enter_weight">Enter weight</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_daily_intake">Enter daily intake</string>
    <string name="enter_exercise">Enter exercise</string>
    <string name="add">Add</string>
    <string name="app_title">WeightState</string>
    <string name="sms">SMS</string>
    <string name="enter_phone_number">Enter 10-digit phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="sms_notification">Send Notifications via SMS</string>
    <string name="send_sms">Send SMS</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="logo">Logo</string>
    <string name="instructional_note">Interact with any value on the grid to change it!</string>
    <string name="daily_weight_screen">Daily Weight Screen</string>
    <string name="SMS_screen">SMS Screen</string>
    <string name="account_settings">Account Settings</string>
    <string name="select_prompt">Welcome to WeightState!\n Select your desired screen:</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="notification_settings">Enable notifications?</string>
    <string name="login_credentials_note">Enter your new login credential(s):</string>
    <string name="theme_note">Select your theme:</string>
    <string name="notification_note">Select your notification status:</string>
    <string name="settings_note">Customize your settings!</string>
    <string name="save_button">Save Changes</string>
</resources>